--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Guntars Asmanis-Graham",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^2.3.2"
+    "jasmine": "^2.3.2",
+    "coffee-script": "^1.10.0"
   },
   "dependencies": {
-    "coffee-script": "^1.10.0"
   }
 }
