--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "Guntars Asmanis-Graham",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^2.3.2",
-    "coffee-script": "^1.10.0"
+    "braces": "^1.8.1",
+    "coffee-script": "^1.10.0",
+    "jasmine": "^2.3.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
