--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glob-intersect",
+  "name": "glob-intersection",
   "version": "0.1.0",
   "description": "Find the intersection of two glob patterns",
   "main": "index.js",
@@ -7,12 +7,30 @@
     "test": "coffee jasmine.coffee",
     "build": "coffee -c index.coffee"
   },
-  "author": "Guntars Asmanis-Graham",
-  "license": "ISC",
+  "keywords": [
+    "glob",
+    "intersect",
+    "intersection"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https:\/\/github.com\/Pathgather\/glob-intersection"
+  },
+  "author": {
+    "name": "Guntars Asmanis-Graham",
+    "email": "guntars@pathgather.com"
+  },
+  "bugs": {
+    "url": "https:\/\/github.com\/Pathgather\/glob-intersection\/issues"
+  },
+  "homepage": "https:\/\/github.com\/Pathgather\/glob-intersection",
+  "license": "MIT",
   "devDependencies": {
     "braces": "^1.8.1",
     "coffee-script": "^1.10.0",
     "jasmine": "^2.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+
+  }
 }
